Update suggestion links in index.html
Replaced several suggestion links with new ones.

--- a/index.html
+++ b/index.html
@@ -19,29 +19,11 @@
             <div class="suggestions">
                 <h3>You might be looking for:</h3>
                 <div class="links-grid">
-                    <a href="https://github.com" class="suggestion-link">
-                        GitHub
+                    <a href="https://www.mybustimes.cc" class="suggestion-link">
+                        MyBusTimes
                     </a>
-                    <a href="https://stackoverflow.com" class="suggestion-link">
-                        Stack Overflow
-                    </a>
-                    <a href="https://developer.mozilla.org" class="suggestion-link">
-                        MDN Web Docs
-                    </a>
-                    <a href="https://codepen.io" class="suggestion-link">
-                        CodePen
-                    </a>
-                    <a href="https://freecodecamp.org" class="suggestion-link">
-                        freeCodeCamp
-                    </a>
-                    <a href="https://css-tricks.com" class="suggestion-link">
-                        CSS-Tricks
-                    </a>
-                    <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" class="suggestion-link">
-                        Something Fun
-                    </a>
-                    <a href="https://reddit.com/r/programming" class="suggestion-link">
-                        r/programming
+                    <a href="https://Ticketer.mybustimes.cc" class="suggestion-link">
+                        MyTicketer
                     </a>
                 </div>
             </div>
