Change title and error message for 404 page

--- a/index.html
+++ b/index.html
@@ -3,18 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>404 - Page Not Found</title>
+    <title>404 - Site Not Found</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
         <div class="error-content">
             <h1 class="error-code">404</h1>
-            <h2 class="error-message">Oops! Page Not Found</h2>
-            <p class="error-description">
-                The page you're looking for seems to have wandered off into the digital void.
-                Don't worry, it happens to the best of us!
-            </p>
+            <h2 class="error-message">Oops! Site Not Found</h2>
             
             <div class="suggestions">
                 <h3>You might be looking for:</h3>
