Update home link to point to mybustimes.cc

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <button onclick="history.back()" class="back-button">
                     ← Go Back
                 </button>
-                <a href="/" class="home-button">
+                <a href="https://www.mybustimes.cc" class="home-button">
                     Home
                 </a>
             </div>
